--- a/poem.rmd
+++ b/poem.rmd
@@ -1,6 +1,6 @@
 ---
 title: "git_01"
-author: "Math_116"
+author: "Savannah Johnson"
 date: "Fall semester"
 output: html_document
 ---
@@ -15,9 +15,20 @@ you, if you change any of this the git program will notice it and compromise you
 
 ## First Verse 
 <!--Put the first five lines of a poem by Lewis Carrol in this section!-->
+“The sun was shining on the sea,
+
+Shining with all his might:
+
+He did his very best to make
+
+The billows smooth and
+
+bright- And this was odd, because it was The middle of the night.
+
 
 ## Second Verse
 <!--Put the first five lines of a poem by Robert Frost here!-->
+
 
 ## Third Verse
 <!--Put the first two verses of The Walrus and the Carpenter here!-->
