--- a/poem.rmd
+++ b/poem.rmd
@@ -15,7 +15,7 @@ you, if you change any of this the git program will notice it and compromise you
 
 ## First Verse 
 <!--Put the first five lines of a poem by Lewis Carrol in this section!-->
-“The sun was shining on the sea,
+The sun was shining on the sea,
 
 Shining with all his might:
 
@@ -28,6 +28,7 @@ bright- And this was odd, because it was The middle of the night.
 
 ## Second Verse
 <!--Put the first five lines of a poem by Robert Frost here!-->
+Two roads diverged in a yellow wood, And sorry I could not travel both And be one traveler,long I stood And looked down one as far as I could To where it bent in the undergrowth;
 
 
 ## Third Verse
